<resources>
    <string name="app_name">Dictionary</string>
    <string name="editTextSearch_Hint">Type your word</string>
    <string name="buttonSpeak">Speak</string>
    <string name="button_setting_language">Languages</string>
    <string name="setting_language_english">English</string>
    <string name="setting_language_vietnamese">Vietnamese</string>
    <string name="setting_language_german">German</string>
    <string name="RunOCR">Run OCR</string>
    <string name="TapScreenToOpenCamera">Tap screen to open camera</string>
    <string name="VietnameseDic">Vietnamese - English</string>
    <string name="German_Vietnamese_Dict">German - Vietnamese</string>
    <string name="Vietnamese_German_Dict">Vietnamese - German</string>
    <string name="Camera">Camera</string>
    <string name="ChatHead">Quick search</string>
    <string name="FavoriteWord">Favorite Words</string>
    <string name="AddFavoriteWord">add to favorite</string>
    <string name="title_activity_settings">Settings</string>
    <string name="Setting">Setting</string>
    <string name="TranslateText">Translate text</string>
    <string name="speakText">Speak</string>
    <string name="labelTranslate">English - Vietnamese</string>
    <string name="labelSetting">Settings</string>
    <string name="labelOCR">Optical Charactor Regconition</string>
    <string name="labelVietnamEng">Vietnamese - English</string>
    <string name="labelFavoriteWord">Favorite words</string>
    <string name="labelTranslateText">Translate Text</string>
    <!-- my setting -->
    <string name="pref_header_information">Software info</string>

    <string name="title_theme_category" translatable="false">Theme</string>
    <string name="title_Light_Theme">Light theme</string>
    <string name="summary_Light_theme">Use our light theme instead of dark theme</string>

    <string name="title_language_category">Language</string>
    <string name="default_summary">English</string>
    <string-array name="pref_language_list_titles">
        <item>English</item>
        <item>German</item>
        <item>Vietnamese</item>
    </string-array>
    <string-array name="pref_language_list_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>

    <string name="title_pronouce_category">Pronounce</string>
    <string name="title_pronounce">Automatically pronounce when translate</string>

    <string name="title_information" translatable="false">Đồ án nhập môn ứng dụng di động</string>
    <string name="summary_information" translatable="false">GVHD: Phan Nguyệt Minh\n
                                        Nhóm sinh viên: nhóm 29\n
                                        - Nguyễn Đức Thông - 15520856\n
                                        - Hứa Vĩ Trung - 15520940\n
                                        - Nguyễn Hoàng Anh Tuấn - 15520971\n</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general" translatable="false">General</string>

    <string name="pref_title_social_recommendations" translatable="false">Enable social recommendations</string>
    <string name="pref_description_social_recommendations" translatable="false">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name" translatable="false">Display name</string>
    <string name="pref_default_display_name" translatable="false">John Smith</string>

    <string name="pref_title_add_friends_to_messages" translatable="false">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync" translatable="false">Data &amp; sync</string>

    <string name="pref_title_sync_frequency" translatable="false">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings" translatable="false">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications" translatable="false">Notifications</string>

    <string name="pref_title_new_message_notifications" translatable="false">New message notifications</string>

    <string name="pref_title_ringtone" translatable="false">Ringtone</string>
    <string name="pref_ringtone_silent" translatable="false">Silent</string>

    <string name="pref_title_vibrate" translatable="false">Vibrate</string>
    <string name="title_activity_settings1">Settings</string>
</resources>
