<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LanguagesSetting">

    <Button
        android:id="@+id/btnSettingEnglish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:theme="@style/PrimaryFlatButton"
        android:text="@string/setting_language_english"/>

    <Button
        android:id="@+id/btnSettingGerman"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:theme="@style/PrimaryFlatButton"
        android:text="@string/setting_language_german"/>

    <Button
        android:id="@+id/btnSettingVietnamese"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:theme="@style/PrimaryFlatButton"
        android:text="@string/setting_language_vietnamese"/>

</LinearLayout>