<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/transitionSetting"
    tools:context=".Setting">

    <Button
        android:id="@+id/btnLanguage"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/button_setting_language"
        android:gravity=""
        android:textAllCaps="false"
        android:textStyle="bold"
        android:textSize="20dp"
        android:theme="@style/PrimaryFlatButton"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="12dp"
        >
        <Switch
            android:id="@+id/switchTheme"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/title_Light_Theme"
            android:textColor="#00b0ff"
            android:textStyle="bold"
            android:textSize="20dp"
            />
    </LinearLayout>

    <SeekBar
        android:id="@+id/seekbarBrightness"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="255"
        />

    <Button
        android:id="@+id/btnSoftInfo"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/pref_header_information"
        android:textAllCaps="false"
        android:gravity="left"
        android:textSize="20dp"
        android:textStyle="bold"
        android:theme="@style/PrimaryFlatButton"/>

    <ImageView
        android:id="@+id/imvSoftInfo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/info"
        android:visibility="gone"
        />
</LinearLayout>