<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="category test">
        <CheckBoxPreference
            android:key="PREF_CHECKBOX"
            android:title="Title"
            android:summary="summary" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="PreferenceCategory ListPreference">
        <ListPreference
            android:key="PREF_LIST"
            android:title="ListPreference title"
            android:summary="ListPreference summary"
            android:entries="@array/pref_example_list_titles"
            android:entryValues="@array/list_preference_entry_values"
            android:defaultValue="2"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="PreferenceCategory Intent">
        <PreferenceScreen
            android:title="Android Coding"
            android:summary="android-coding.blogspot.com">
            <intent android:action="android.intent.action.VIEW"
                android:data="http://android-coding.blogspot.com/" />
        </PreferenceScreen>
        <PreferenceScreen
            android:title="Android Developers"
            android:summary="developer.android.com">
            <intent android:action="android.intent.action.VIEW"
                android:data="http://developer.android.com/" />
        </PreferenceScreen>
        <PreferenceScreen
            android:title="Google"
            android:summary="www.google.com">
            <intent android:action="android.intent.action.VIEW"
                android:data="http://www.google.com/" />
        </PreferenceScreen>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="PreferenceCategory EditTextPreference">
        <EditTextPreference
            android:key="PREF_EDITTEXT"
            android:title="EditText title"
            android:summary="EditText summary"
            android:dialogTitle="EditText Dialog" />
    </PreferenceCategory>
    <!-- A 'parent' preference, which enables/disables child preferences (below)
         when checked/unchecked. -->
    <SwitchPreference
        android:defaultValue="true"
        android:key="notifications_new_message"
        android:title="@string/pref_title_new_message_notifications" />

    <!-- Allows the user to choose a ringtone in the 'notification' category. -->
    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
    <!-- NOTE: RingtonePreference's summary should be set to its value by the activity code. -->
    <RingtonePreference
        android:defaultValue="content://settings/system/notification_sound"
        android:dependency="notifications_new_message"
        android:key="notifications_new_message_ringtone"
        android:ringtoneType="notification"
        android:title="@string/pref_title_ringtone" />

    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
    <SwitchPreference
        android:defaultValue="true"
        android:dependency="notifications_new_message"
        android:key="notifications_new_message_vibrate"
        android:title="@string/pref_title_vibrate" />

    <EditTextPreference
        android:text="aasdasdad"/>

</PreferenceScreen>
